<resources>
    <string name="app_name">AcademicAssistanceSystem</string>
    <string name="your_folders">Your Folders</string>
    <string name="folder_name">folder name</string>
    <string name="create_a_flash_card">Create a Flash Card</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="view_folders">View Folders</string>
    <string name="academic_assistance_system">Academic Assistance System</string>
    <string name="flash_cards">Flash Card</string>
    <string name="quiz">Quiz</string>
    <string name="start_quizzes">Start Quizzes</string>
    <string name="calendar">Calendar</string>
    <string name="the_key_to_this_quiz">The key to this quiz</string>
    <string name="submit">Submit</string>
    <string name="create_a_quiz_question">Create a quiz question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="next_question">Next Question</string>
    <string name="type_your_question">Type your question</string>
    <string name="the_key">The key</string>
    <string name="you_will_send_this_question_above_to_the_quiz_list_by_given_quiz_name_below">You will send this question above to the quiz list by given quiz name below:</string>
    <string name="quiz_name_eg_quiz1_quiz2">Quiz name (eg. quiz1, quiz2...)</string>
    <string name="create_a_question_for_quiz">Create a Question for Quiz</string>
    <string name="quiz_list">Quiz List</string>
    <string name="view_stats">View Stats</string>
    <string name="highest_grade">Highest Quiz Grade: 0.00%</string>
    <string name="lowest_grade">Lowest Quiz Grade: 0.00%</string>
    <string name="completed_quizzes">Number of Completed Quizzes: 0</string>
    <string name="average_grade">Average Quiz Grade: 0.00%</string>
    <string name="view_solutions">View Solutions</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="next">Next</string>
</resources>