<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3350.AAS.presentation.MakeMcqQuizActivity"
    android:background="@drawable/create_question">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/cardview_shadow_end_color"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/create_a_question_for_quiz"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/question"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="@string/type_your_question"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/option_A"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:hint="@string/option_a"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/option_B"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="@string/option_b"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/option_C"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="@string/option_c"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/key"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="425dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="@string/the_key"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="casual"
        android:text="If you want to send to a NEW quiz name, \nType new quiz name below \n(and ignore selected exist quiz name above)"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/quiz_index"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="690dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="Alternative NEW Quiz name  (OPTIONAL)"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#989898" />

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_marginTop="500dp"
        android:background="@color/white"
        android:layout_centerHorizontal="true"

        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="5"
            android:fontFamily="casual"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="Select existing Quiz: "
            android:textSize="25sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinner_quiz_name"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:background="@null" >
        </Spinner>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_Button"
        android:layout_width="601dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="800dp"
        android:layout_marginEnd="-1dp"
        android:backgroundTint="#FFC107"
        android:gravity="center"
        android:scaleX="0.75"
        android:scaleY="0.9"
        android:text="@string/submit"
        android:textColor="#000000"
        android:textSize="30sp" />

</RelativeLayout>