<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/viewQuestion"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:scaleX="0.9"
        android:text="@string/question"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/viewSolution"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:scaleX="0.9"
        android:text="@string/answer"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewNextAnswerButton"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="814dp"
        android:layout_marginBottom="-2dp"
        android:backgroundTint="#000000"
        android:gravity="center"
        android:scaleX="0.7"
        android:scaleY="0.8"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

</RelativeLayout>