<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:background="@mipmap/night_sky"
    tools:context="comp3350.AAS.presentation.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:gravity="center"
        android:scaleX="0.9"
        android:text="@string/academic_assistance_system"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:backgroundTint="#000000"
        android:gravity="center"
        android:scaleX="0.7"
        android:scaleY="0.8"
        android:text="@string/flash_cards"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:backgroundTint="#000000"
        android:gravity="center"
        android:scaleX="0.7"
        android:scaleY="0.8"
        android:text="@string/quiz"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />


</RelativeLayout>