<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:background="@drawable/create_flashcard"
    tools:context="comp3350.AAS.presentation.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="70dp"
        android:background="@color/cardview_shadow_end_color"
        android:fontFamily="casual"
        android:gravity="center"
        android:scaleX="0.9"
        android:text="@string/create_a_flash_card"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDescription"
        android:layout_width="499dp"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="239dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#777777" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTitle"
        android:layout_width="499dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#777777"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextFolderName"
        android:layout_width="496dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="@string/folder_name"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textColorHint="#777777"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="601dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="-1dp"
        android:backgroundTint="@color/material_on_primary_disabled"
        android:fontFamily="casual"
        android:gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.9"
        android:text="@string/submit"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="50dp"
        android:text="To create a new folder, type the folder name in the field below. Otherwise select an existing folder from the dropdown menu above."
        android:textColor="#000000"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewFoldersButton"
        android:layout_width="601dp"
        android:layout_height="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="635dp"
        android:layout_marginEnd="-1dp"
        android:backgroundTint="@color/material_on_primary_disabled"
        android:fontFamily="casual"
        android:gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.9"
        android:text="@string/view_folders"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_weight="5"
        android:padding="10dp"
        android:text="Select existing Quiz: "
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"

        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="5"
            android:padding="10dp"
            android:text="Select an existing folder: "
            android:textColor="@color/black"
            android:textSize="21sp" />

        <Spinner
            android:id="@+id/spinner_folder_name"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:spinnerMode="dropdown"
            android:background="@null">
        </Spinner>
    </LinearLayout>

</RelativeLayout>