<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3350.AAS.presentation.MakeQuizActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#D32401"
        android:gravity="center"
        android:text="Create a Question for Quiz"
        android:textColor="#FFFFFF"
        android:textSize="45sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/question"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="Type your question"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#989898" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/option_A"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:hint="@string/option_a"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#989898" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/option_B"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="@string/option_b"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#989898" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/option_C"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="@string/option_c"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#989898" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/key"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="425dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="The key"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#989898" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="You will send this question above to the quiz list by given quiz name below:"
        android:textColor="#000000"
        android:textSize="25sp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/quiz_index"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="590dp"
        android:backgroundTint="#453F3F"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="Quiz name (eg. quiz1, quiz2...)"
        android:inputType="textPersonName"
        android:scaleY="1.25"
        android:textColor="#000000"
        android:textColorHint="#989898" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_Button"
        android:layout_width="601dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="-1dp"
        android:backgroundTint="#FFC107"
        android:gravity="center"
        android:scaleX="0.75"
        android:scaleY="0.9"
        android:text="@string/submit"
        android:textColor="#000000"
        android:textSize="30sp" />

</RelativeLayout>